--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="content">
                     <img src="image/icon-3.png">
                 <h3>gym for women</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p> -->
                 <a href="#" class="btn">read more</a>
             </div>
             </div>
